# GTK_auto

automation_tool/: CMakeLists.txt
automation_tool/Analyzer/: CMakeLists.txt  LibContentAnalyzerConfig.xml  Makefile  analyzer.cpp  cmake_install.cmake
automation_tool/ContentAnalyzerApp/: CMakeLists.txt  Source.cpp
automation_tool/LibContentAnalyzer/: CMakeLists.txt  LibConteneAnalyzerAF.cpp  LibContentAnalyzer.cpp  LibContentAnalyzer.h  LibContentAnalyzer3AAutoConsistent.cpp  LibContentAnalyzer3AAutoConsistent.h  LibContentAnalyzerAE.cpp  LibContentAnalyzerAE.h  LibContentAnalyzerAF.h  LibContentAnalyzerATE.cpp  LibContentAnalyzerATE.h  LibContentAnalyzerAutoAWB.cpp  LibContentAnalyzerAutoAWB.h  LibContentAnalyzerBase.cpp  LibContentAnalyzerBase.h  LibContentAnalyzerBrightness.cpp  LibContentAnalyzerBrightness.h  LibContentAnalyzerCameraPosition.cpp  LibContentAnalyzerCameraPosition.h  LibContentAnalyzerCheckChessboard.cpp  LibContentAnalyzerCheckChessboard.h  LibContentAnalyzerCheckMuteMode.cpp  LibContentAnalyzerCheckMuteMode.h  LibContentAnalyzerColorCast.cpp  LibContentAnalyzerColorCast.h  LibContentAnalyzerColorEffect.cpp  LibContentAnalyzerColorEffect.h  LibContentAnalyzerCommonFunction.cpp  LibContentAnalyzerCommonFunction.h  LibContentAnalyzerContrast.cpp  LibContentAnalyzerContrast.h  LibContentAnalyzerExposure.cpp  LibContentAnalyzerExposure.h  LibContentAnalyzerFOV.cpp  LibContentAnalyzerFOV.h  LibContentAnalyzerFaceDetection.cpp  LibContentAnalyzerFaceDetection.h  LibContentAnalyzerFocus.cpp  LibContentAnalyzerFocus.h  LibContentAnalyzerGDC.cpp  (+23 more)
automation_tool/LibSimilarityCheck/: CMakeLists.txt  Defs.h  Filter.cpp  LibSimilarityCheck.h  Match.cpp  Psnr.cpp  Ssim.cpp  dllmain.cpp
automation_tool/LibToolFunction/: CMakeLists.txt  LibToolFunction.cpp  LibToolFunction.h
automation_tool/MondelloOutputAnalyzerApp/: CMakeLists.txt  mondello_output_analyzer_app.cpp
automation_tool/camera2hal-caff/: CAFF.glade  CommonType.h  EventControl.cpp  EventControl.h  FileWindow.cpp  FileWindow.h  Makefile  PipelineManage.cpp  PipelineManage.h  RemoteClient.cpp  RemoteClient.h  RemoteProxy.cpp  RemoteProxy.h  git_log.txt  gstCaffUI.cpp  gstCaffUI.h  main.cpp
automation_tool/camera2hal-caff/remote/: RemoteClient.cpp  client.py  make.sh
automation_tool/gstCaffAutomation/: CMakeLists.txt  gstCaffAutoTestConfig.cpp  gstCaffAutoTestConfig.h  gstCaffAutoTestMain.cpp  gstCaffAutoTestPerformance.cpp  gstCaffAutoTestPerformance.h  gstCaffAutoTestQueue.cpp  gstCaffAutoTestQueue.h  gstCaffAutoTestSampleCallback.cpp  gstCaffAutoTestSampleCallback.h  gstCaffAutoTestScheduler.cpp  gstCaffAutoTestScheduler.h  gstCaffAutoTestTool.cpp  gstCaffAutoTestTool.h
automation_tool/gstapi/: Makefile
automation_tool/gstapi/src/: case_gst_common.cpp  case_gst_common.h  case_gst_properties.cpp  case_gst_properties.h  main.cpp
automation_tool/gswitch/: Makefile
automation_tool/gswitch/src/: video_capture.cpp  video_capture.h
automation_tool/ipu4_v4l2_test/: .gitignore  Makefile  README.md  adv7481_be_soc_config.sh  adv7481_mipi_config.sh  generator.sh  imx214_be_config.sh  main.cpp  ov13860_be_config.sh  tpg_config.sh
automation_tool/ipu4_v4l2_test/cases/: run_all_cases.sh  script_template  subdev_config.sh  test_results_calc.sh
automation_tool/ipu4_v4l2_test/include/linux/: media-bus-format.h  media.h  videodev2.h
automation_tool/ipu4_v4l2_test/src/cases/basic_api/close/: case_close.cpp  case_close_sub_dev.cpp
automation_tool/ipu4_v4l2_test/src/cases/basic_api/open/: case_open.cpp  case_open_sub_dev.cpp
automation_tool/ipu4_v4l2_test/src/cases/basic_api/querycap/: case_querycap.cpp  case_querycap.h  case_querycap_support.cpp
automation_tool/ipu4_v4l2_test/src/cases/basic_api/querystd/: case_querystd.cpp  case_querystd.h  case_querystd_support.cpp
automation_tool/ipu4_v4l2_test/src/cases/basic_api/v4l2ctrl/: query_ctrl.cpp  set_and_get_ctrl.cpp  set_and_get_ext_ctrls.cpp  v4l2_ctrl.cpp  v4l2_ctrl.h
automation_tool/ipu4_v4l2_test/src/cases/extend_ioctl/deg_g_chip_info/: case_dbg_chip_info.cpp
automation_tool/ipu4_v4l2_test/src/cases/mc_stdioctl/: mc_stdioctl_test.cpp  mc_stdioctl_test.h
automation_tool/ipu4_v4l2_test/src/cases/mc_stdioctl/api_check/: buf_check.cpp  error_handle_check.cpp  fmt_check.cpp  normal_check.cpp
automation_tool/ipu4_v4l2_test/src/cases/mc_stdioctl/normal_capture/: fps_statistics.cpp  normal_capture.cpp
automation_tool/ipu4_v4l2_test/src/cases/mc_yavta/: mc_yavta_test.cpp  mc_yavta_test.h
automation_tool/ipu4_v4l2_test/src/cases/mc_yavta/bayercapture/: bayer_capture_pixter_raw10.cpp  bayer_capture_pixter_raw8.cpp  bayer_capture_tpg_raw8.cpp
automation_tool/ipu4_v4l2_test/src/cases/mc_yavta/isacapture/: isa_capture_tpg_raw8.cpp
automation_tool/ipu4_v4l2_test/src/cases/mc_yavta/mipicapture/: mipi_capture_tpg.cpp
automation_tool/ipu4_v4l2_test/src/cases/media_ctl/: media_ctl_test.cpp  media_ctl_test.h
automation_tool/ipu4_v4l2_test/src/cases/media_ctl/basic_api/: close.cpp  open.cpp
automation_tool/ipu4_v4l2_test/src/cases/media_ctl/ioctl_api/: device_info.cpp  enum_entities.cpp  enum_links.cpp  setup_link.cpp
automation_tool/ipu4_v4l2_test/src/cases/subdev_api/: enum_mbus_code.cpp  get_fmt.cpp  get_selection.cpp  set_fmt.cpp  set_selection.cpp  v4l2_subdev.cpp  v4l2_subdev.h  v4l2_subdev_sfmt.cpp  v4l2_subdev_sfmt.h  v4l2_subdev_ssel.cpp  v4l2_subdev_ssel.h
automation_tool/ipu4_v4l2_test/src/common/: format.cpp  format.h  log.cpp  log.h  mc_config.cpp  mc_config.h  media_ctl_define.h  mutex.h  utils.cpp  utils.h  v4l2_capture.cpp  v4l2_capture.h  v4l2_define.h  v4l2_settings.cpp  v4l2_settings.h  v4l2_test.cpp  v4l2_test.h  v4l2_test_env.cpp  v4l2_test_env.h  yavta.cpp
automation_tool/mutlicam-test/: Makefile  README  main.cpp
